...
        button.setTitle("Войти", for: .normal)
        button.layer.cornerRadius = 16
        button.backgroundColor = .ypWhite
        button.setTitleColor(.ypBlack, for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 17)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "Authenticate"
        return button
    }()
    
    private lazy var unsplashLogo: UIImageView = {
        let unsplashImage = UIImageView()
        unsplashImage.image = UIImage(named: "Logo_of_Unsplash")
...
